--- a/AGU2017/AGU2017.tex
+++ b/AGU2017/AGU2017.tex
@@ -1,8 +1,8 @@
 \documentclass[
     landscape,      % landscape or portrait
-    paperwidth = 1200mm,
-    paperheight = 900mm,
-    fontscale = 0.4,
+    paperwidth = 1120mm,
+    paperheight = 820mm,
+    fontscale = 0.45,
     margin = 1.7cm,
 ]{baposter}
 \definecolor{lightblue}{rgb}{0.145,0.6666,1}
@@ -28,7 +28,7 @@
     borderColor = blue,
     headerColorOne = black,
     headerColorTwo = lightblue,
-    headerFontColor = white,
+    headerFontColor = black,
     textborder = roundedleft,   % none, bars, coils, triangles, rectangle
                                 % rounded, faded, roundedsmall, roundedleft
                                 % roundedright
@@ -76,8 +76,6 @@ We combine the group velocity dispersion curves measured from empirical green's 
 obtain lateral isotropic Rayleigh group velocity maps at different periods based on traditional surface wave tomography method
 and  construct a 3D $V_{sv}$ model down to about 70 km using Markov Chain Monte Carlo method (MCMC) (Fig. 2).
 
-
-
 \begin{center}
 
 \begin{minipage}{0.3\textwidth}
@@ -92,7 +90,7 @@ Dashed red rectangle shows the study area. Two red triangles represent two stati
 named as AKS and KOL, which are collineation with star-labelled earthquake.
 \end{minipage}
 \begin{minipage}{0.45\textwidth}
-\includegraphics[width=\textwidth]{./images/XJ.png}
+\includegraphics[width=\textwidth]{./images/XJ.pdf}
 \end{minipage}
 \hspace{0.1cm}
 \end{center}
@@ -111,7 +109,7 @@ Work flow of this study.
 \end{minipage}
 \hspace{0.1cm}
 \end{center}
-
+% 
 We control qualities of dispersion curves with spectral signal-noise-ratio (SNR) and standard deviation of measurements (Fig. 3).
 For EGFs, we define signal-noise-ratio (SNR) as ratio of peak in surface wave signal window and root mean standard (rms) in noise window at each period and we measure dispersion curves every trimesters
 , which provide standard deviation of dispersion curve between a pair of stations.
@@ -122,7 +120,7 @@ We take averages of reliable dispersion curves, measured from EGFs and teleseism
 usable dispersion curves (Fig. 4) which are weighted by inverses of their standard deviations. The standard
 deviations of final dispersion curves are the summation of those constituents.
 
-\putfigureLR{0.45\textwidth}{./images/Pathnum.png}{0.45\textwidth}{./images/JointDisp.png}
+\putfigureLR{0.45\textwidth}{./images/Pathnum.png}{0.45\textwidth}{./images/JointDisp.pdf}
 \hspace{0.15cm}
 
 \putfigurecaptionLR{0.45\textwidth}
@@ -158,7 +156,7 @@ blocks. At short periods (10, 26 and 33 s),  perturbation maps are influenced by
 low group velocities in Junggar and Tarim basins. Long period map shows high velocities there, as they are cratons (Fig. 6).
 
 \begin{center}
-\includegraphics[width=0.75\textwidth]{./images/resolution.png}
+\includegraphics[width=0.75\textwidth]{./images/resolution.pdf}
 \begin{minipage}{0.9\textwidth}
 \footnotesize
 \vspace{0.2em}
